--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,11 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title><%= htmlWebpackPlugin.options.title %></title>
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <style>
+      * {
+        box-sizing: border-box;
+      }
+    </style>
   </head>
   <body>
     <noscript>
